--- a/index.html
+++ b/index.html
@@ -33,4 +33,31 @@
                 text="value:เลือกมินิเกม; color:#FFF; align:center; width:2"></a-entity>
 
       <a-box class="clickable" position="0 -0.5 0" depth="0.1" height="0.25" width="0.8"
-             color="#66CDAA" oncli
+             color="#66CDAA" onclick="goMode('hygiene')">
+        <a-entity position="0 0 0.06"
+                  text="value:อนามัยส่วนบุคคล; align:center; width:1.6"></a-entity>
+      </a-box>
+
+      <a-box class="clickable" position="0 -1.0 0" depth="0.1" height="0.25" width="0.8"
+             color="#FFD166" onclick="goMode('nutrition')">
+        <a-entity position="0 0 0.06"
+                  text="value:โภชนาการ; align:center; width:1.6"></a-entity>
+      </a-box>
+
+      <a-box class="clickable" position="0 -1.5 0" depth="0.1" height="0.25" width="0.8"
+             color="#4CC9F0" onclick="goMode('exercise')">
+        <a-entity position="0 0 0.06"
+                  text="value:การออกกำลังกาย; align:center; width:1.6"></a-entity>
+      </a-box>
+    </a-entity>
+
+    <!-- ฉากย่อย -->
+    <a-entity id="grp_hygiene" visible="false"></a-entity>
+    <a-entity id="grp_nutrition" visible="false"></a-entity>
+    <a-entity id="grp_exercise" visible="false"></a-entity>
+
+    <a-entity light="type: ambient; intensity: 0.7"></a-entity>
+    <a-entity light="type: directional; intensity: 0.6" position="1 3 2"></a-entity>
+  </a-scene>
+</body>
+</html>
