--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Health3 VR — Spatial/WebXR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://unpkg.com/troika-three-text/dist/troika-three-text.umd.js"></script>
+  <script src="https://unpkg.com/aframe-troika-text/dist/aframe-troika-text.min.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
@@ -18,11 +20,11 @@
 
     <!-- HUD -->
     <a-entity id="hudState" position="0 1.7 -1.2"
-              text="value:โหมด: menu; color:#FFF; align:center; width:2"></a-entity>
+              troika-text="value:โหมด: menu; color:#FFF; anchor:center; maxWidth:2"></a-entity>
     <a-entity id="hudScore" position="0 1.52 -1.2"
-              text="value:คะแนน: 0; color:#FFF; align:center; width:2"></a-entity>
+              troika-text="value:คะแนน: 0; color:#FFF; anchor:center; maxWidth:2"></a-entity>
     <a-entity id="hudTime" position="0 1.34 -1.2"
-              text="value:เวลา: 0s; color:#FFF; align:center; width:2"></a-entity>
+              troika-text="value:เวลา: 0s; color:#FFF; anchor:center; maxWidth:2"></a-entity>
 
     <a-sky color="#224466"></a-sky>
     <a-plane position="0 0 -2" rotation="-90 0 0" width="20" height="20" color="#334455"></a-plane>
@@ -30,24 +32,24 @@
     <!-- เมนูหลัก -->
     <a-entity id="grp_menu" visible="true" position="0 1.3 -1.2">
       <a-entity position="0 0 0"
-                text="value:เลือกมินิเกม; color:#FFF; align:center; width:2"></a-entity>
+                troika-text="value:เลือกมินิเกม; color:#FFF; anchor:center; maxWidth:2"></a-entity>
 
       <a-box class="clickable" position="0 -0.5 0" depth="0.1" height="0.25" width="0.8"
              color="#66CDAA" onclick="goMode('hygiene')">
         <a-entity position="0 0 0.06"
-                  text="value:อนามัยส่วนบุคคล; align:center; width:1.6"></a-entity>
+                  troika-text="value:อนามัยส่วนบุคคล; anchor:center; maxWidth:1.6"></a-entity>
       </a-box>
 
       <a-box class="clickable" position="0 -1.0 0" depth="0.1" height="0.25" width="0.8"
              color="#FFD166" onclick="goMode('nutrition')">
         <a-entity position="0 0 0.06"
-                  text="value:โภชนาการ; align:center; width:1.6"></a-entity>
+                  troika-text="value:โภชนาการ; anchor:center; maxWidth:1.6"></a-entity>
       </a-box>
 
       <a-box class="clickable" position="0 -1.5 0" depth="0.1" height="0.25" width="0.8"
              color="#4CC9F0" onclick="goMode('exercise')">
         <a-entity position="0 0 0.06"
-                  text="value:การออกกำลังกาย; align:center; width:1.6"></a-entity>
+                  troika-text="value:การออกกำลังกาย; anchor:center; maxWidth:1.6"></a-entity>
       </a-box>
     </a-entity>
 
