--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
   <meta charset="utf-8" />
   <title>Health3 VR — Spatial/WebXR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  <!-- A-Frame core -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+
+  <!-- Troika (รองรับภาษาไทย) -->
   <script src="https://unpkg.com/troika-three-text/dist/troika-three-text.umd.js"></script>
   <script src="https://unpkg.com/aframe-troika-text/dist/aframe-troika-text.min.js"></script>
+
+  <!-- Game logic -->
   <script src="script.js"></script>
 </head>
 <body>
-  <a-scene renderer="antialias: true" tick-timer hand-gestures>
+  <a-scene renderer="antialias: true" tick-timer hand-gestures ensure-cursor>
+    <!-- กล้อง + ตัวชี้ -->
     <a-entity id="rig">
       <a-entity id="camera" camera look-controls position="0 1.6 0"></a-entity>
       <a-entity laser-controls="hand: right"></a-entity>
@@ -18,46 +25,48 @@
       <a-entity hand-tracking-controls="hand: left"></a-entity>
     </a-entity>
 
-    <!-- HUD -->
-    <a-entity id="hudState" position="0 1.7 -1.2"
-              troika-text="value:โหมด: menu; color:#FFF; anchor:center; maxWidth:2"></a-entity>
+    <!-- HUD (ใช้ troika-text) -->
+    <a-entity id="hudState" position="0 1.70 -1.2"
+              troika-text="value:โหมด: menu; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
     <a-entity id="hudScore" position="0 1.52 -1.2"
-              troika-text="value:คะแนน: 0; color:#FFF; anchor:center; maxWidth:2"></a-entity>
+              troika-text="value:คะแนน: 0; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
     <a-entity id="hudTime" position="0 1.34 -1.2"
-              troika-text="value:เวลา: 0s; color:#FFF; anchor:center; maxWidth:2"></a-entity>
+              troika-text="value:เวลา: 0s; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
+    <!-- พื้นหลัง -->
     <a-sky color="#224466"></a-sky>
     <a-plane position="0 0 -2" rotation="-90 0 0" width="20" height="20" color="#334455"></a-plane>
 
     <!-- เมนูหลัก -->
     <a-entity id="grp_menu" visible="true" position="0 1.3 -1.2">
       <a-entity position="0 0 0"
-                troika-text="value:เลือกมินิเกม; color:#FFF; anchor:center; maxWidth:2"></a-entity>
+                troika-text="value:เลือกมินิเกม; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
-      <a-box class="clickable" position="0 -0.5 0" depth="0.1" height="0.25" width="0.8"
-             color="#66CDAA" onclick="goMode('hygiene')">
+      <a-box class="clickable" position="0 -0.5 0" depth="0.1" height="0.25" width="0.9"
+             color="#06D6A0" onclick="goMode('hygiene')">
         <a-entity position="0 0 0.06"
-                  troika-text="value:อนามัยส่วนบุคคล; anchor:center; maxWidth:1.6"></a-entity>
+                  troika-text="value:อนามัยส่วนบุคคล; anchor: center; maxWidth: 1.8"></a-entity>
       </a-box>
 
-      <a-box class="clickable" position="0 -1.0 0" depth="0.1" height="0.25" width="0.8"
+      <a-box class="clickable" position="0 -1.0 0" depth="0.1" height="0.25" width="0.9"
              color="#FFD166" onclick="goMode('nutrition')">
         <a-entity position="0 0 0.06"
-                  troika-text="value:โภชนาการ; anchor:center; maxWidth:1.6"></a-entity>
+                  troika-text="value:โภชนาการ; anchor: center; maxWidth: 1.8"></a-entity>
       </a-box>
 
-      <a-box class="clickable" position="0 -1.5 0" depth="0.1" height="0.25" width="0.8"
+      <a-box class="clickable" position="0 -1.5 0" depth="0.1" height="0.25" width="0.9"
              color="#4CC9F0" onclick="goMode('exercise')">
         <a-entity position="0 0 0.06"
-                  troika-text="value:การออกกำลังกาย; anchor:center; maxWidth:1.6"></a-entity>
+                  troika-text="value:การออกกำลังกาย; anchor: center; maxWidth: 1.8"></a-entity>
       </a-box>
     </a-entity>
 
-    <!-- ฉากย่อย -->
+    <!-- ฉากย่อย (เว้นว่าง ไว้ให้ script.js เติมของ) -->
     <a-entity id="grp_hygiene" visible="false"></a-entity>
     <a-entity id="grp_nutrition" visible="false"></a-entity>
     <a-entity id="grp_exercise" visible="false"></a-entity>
 
+    <!-- แสง -->
     <a-entity light="type: ambient; intensity: 0.7"></a-entity>
     <a-entity light="type: directional; intensity: 0.6" position="1 3 2"></a-entity>
   </a-scene>
