--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <a-scene renderer="antialias: true" tick-timer hand-gestures ensure-cursor>
+  <!-- เพิ่ม fontsize-apply ใน a-scene -->
+  <a-scene renderer="antialias: true" tick-timer hand-gestures ensure-cursor fontsize-apply>
     <!-- กล้อง + ตัวชี้ -->
     <a-entity id="rig">
       <a-entity id="camera" camera look-controls position="0 1.6 0"></a-entity>
@@ -25,13 +26,13 @@
       <a-entity hand-tracking-controls="hand: left"></a-entity>
     </a-entity>
 
-    <!-- HUD -->
+    <!-- HUD (ไม่ใส่ fontSize ที่นี่ ให้ script จัดการ) -->
     <a-entity id="hudState" position="0 1.70 -1.2"
-              troika-text="value:โหมด: menu; color:#FFFFFF; anchor: center; maxWidth: 2; fontSize: 0.038"></a-entity>
+              troika-text="value:โหมด: menu; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
     <a-entity id="hudScore" position="0 1.52 -1.2"
-              troika-text="value:คะแนน: 0; color:#FFFFFF; anchor: center; maxWidth: 2; fontSize: 0.034"></a-entity>
+              troika-text="value:คะแนน: 0; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
     <a-entity id="hudTime" position="0 1.34 -1.2"
-              troika-text="value:เวลา: 0s; color:#FFFFFF; anchor: center; maxWidth: 2; fontSize: 0.034"></a-entity>
+              troika-text="value:เวลา: 0s; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
     <!-- พื้นหลัง -->
     <a-sky color="#224466"></a-sky>
@@ -40,24 +41,24 @@
     <!-- เมนูหลัก -->
     <a-entity id="grp_menu" visible="true" position="0 1.3 -1.2">
       <a-entity position="0 0 0"
-                troika-text="value:เลือกมินิเกม; color:#FFFFFF; anchor: center; maxWidth: 2; fontSize: 0.04"></a-entity>
+                troika-text="value:เลือกมินิเกม; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
       <a-box class="clickable" position="0 -0.5 0" depth="0.1" height="0.25" width="0.9"
              color="#06D6A0" onclick="goMode('hygiene')">
         <a-entity position="0 0 0.06"
-                  troika-text="value:อนามัยส่วนบุคคล; anchor: center; maxWidth: 1.8; fontSize: 0.038"></a-entity>
+                  troika-text="value:อนามัยส่วนบุคคล; anchor: center; maxWidth: 1.8"></a-entity>
       </a-box>
 
       <a-box class="clickable" position="0 -1.0 0" depth="0.1" height="0.25" width="0.9"
              color="#FFD166" onclick="goMode('nutrition')">
         <a-entity position="0 0 0.06"
-                  troika-text="value:โภชนาการ; anchor: center; maxWidth: 1.8; fontSize: 0.038"></a-entity>
+                  troika-text="value:โภชนาการ; anchor: center; maxWidth: 1.8"></a-entity>
       </a-box>
 
       <a-box class="clickable" position="0 -1.5 0" depth="0.1" height="0.25" width="0.9"
              color="#4CC9F0" onclick="goMode('exercise')">
         <a-entity position="0 0 0.06"
-                  troika-text="value:การออกกำลังกาย; anchor: center; maxWidth: 1.8; fontSize: 0.038"></a-entity>
+                  troika-text="value:การออกกำลังกาย; anchor: center; maxWidth: 1.8"></a-entity>
       </a-box>
     </a-entity>
 
