--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
   <script src="https://unpkg.com/aframe-troika-text/dist/aframe-troika-text.min.js"></script>
   <!-- Game logic -->
   <script src="script.js"></script>
+  <style>
+    html,body { margin:0; height:100%; background:#000; touch-action: manipulation; }
+    canvas { touch-action: manipulation; }
+  </style>
 </head>
 <body>
-  <!-- เปิด fontsize-apply + ensure-cursor -->
-  <a-scene renderer="antialias: true" tick-timer hand-gestures ensure-cursor fontsize-apply>
+  <!-- เปิด fontsize-apply + ensure-cursor + tap-to-click -->
+  <a-scene renderer="antialias: true"
+           tick-timer hand-gestures ensure-cursor fontsize-apply tap-to-click>
     <!-- กล้อง + ตัวชี้ -->
     <a-entity id="rig">
       <a-entity id="camera" camera look-controls position="0 1.6 0">
-        <!-- รีทิเคิลสำหรับมือถือ: แตะที่จุดกลางหน้าจอ -->
+        <!-- รีทิเคิล (ชี้กลางหน้าจอ) -->
         <a-entity id="reticle"
                   cursor="rayOrigin: entity; fuse: false"
-                  raycaster="objects: .clickable, [troika-text]; far: 20"
-                  geometry="primitive: ring; radiusInner: 0.003; radiusOuter: 0.005"
+                  raycaster="objects: .clickable, [troika-text]; far: 30"
+                  geometry="primitive: ring; radiusInner: 0.003; radiusOuter: 0.006"
                   material="color: #FFFFFF; shader: flat; opacity: 0.9"
                   position="0 0 -1"></a-entity>
       </a-entity>
@@ -31,36 +36,36 @@
       <a-entity hand-tracking-controls="hand: left"></a-entity>
     </a-entity>
 
-    <!-- HUD (ไม่ใส่ fontSize ปล่อยให้ script จัดการ) -->
-    <a-entity id="hudState" position="0 1.70 -1.2"
+    <!-- HUD (ย้ายไปไกลขึ้นเพื่อลดขนาดบนจอ) -->
+    <a-entity id="hudState" position="0 1.70 -1.6"
               troika-text="value:โหมด: menu; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
-    <a-entity id="hudScore" position="0 1.52 -1.2"
+    <a-entity id="hudScore" position="0 1.52 -1.6"
               troika-text="value:คะแนน: 0; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
-    <a-entity id="hudTime" position="0 1.34 -1.2"
+    <a-entity id="hudTime"  position="0 1.34 -1.6"
               troika-text="value:เวลา: 0s; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
     <!-- พื้นหลัง -->
     <a-sky color="#224466"></a-sky>
     <a-plane position="0 0 -2" rotation="-90 0 0" width="20" height="20" color="#334455"></a-plane>
 
-    <!-- เมนูหลัก -->
-    <a-entity id="grp_menu" visible="true" position="0 1.3 -1.2">
+    <!-- เมนูหลัก (ย้ายไปไกลขึ้น) -->
+    <a-entity id="grp_menu" visible="true" position="0 1.25 -1.6">
       <a-entity position="0 0 0"
                 troika-text="value:เลือกมินิเกม; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
-      <a-box class="clickable" position="0 -0.5 0" depth="0.1" height="0.22" width="0.9"
+      <a-box class="clickable" position="0 -0.5 0" depth="0.08" height="0.2" width="0.9"
              color="#06D6A0" onclick="goMode('hygiene')">
         <a-entity class="clickable" position="0 0 0.06"
                   troika-text="value:อนามัยส่วนบุคคล; anchor: center; maxWidth: 1.6"></a-entity>
       </a-box>
 
-      <a-box class="clickable" position="0 -1.0 0" depth="0.1" height="0.22" width="0.9"
+      <a-box class="clickable" position="0 -1.0 0" depth="0.08" height="0.2" width="0.9"
              color="#FFD166" onclick="goMode('nutrition')">
         <a-entity class="clickable" position="0 0 0.06"
                   troika-text="value:โภชนาการ; anchor: center; maxWidth: 1.6"></a-entity>
       </a-box>
 
-      <a-box class="clickable" position="0 -1.5 0" depth="0.1" height="0.22" width="0.9"
+      <a-box class="clickable" position="0 -1.5 0" depth="0.08" height="0.2" width="0.9"
              color="#4CC9F0" onclick="goMode('exercise')">
         <a-entity class="clickable" position="0 0 0.06"
                   troika-text="value:การออกกำลังกาย; anchor: center; maxWidth: 1.6"></a-entity>
